<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.huang.myapplication.end.EndActivity">

    <include layout="@layout/layout_title_visitor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:text="@string/confirm"
        android:textColor="#007EFF"
        android:gravity="center"
        android:textSize="36sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_end_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quxiao"
            android:textSize="32sp"
            android:background="@drawable/btn_bg"/>
        <Button
            android:id="@+id/btn_end_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sure"
            android:textSize="32sp"
            android:background="@drawable/btn_bg"/>
    </LinearLayout>


</LinearLayout>
