<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title_student"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <SurfaceView
            android:id="@+id/previewSV"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/btn_visitor_face_skip"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="@string/skip"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#000000"
                android:background="@drawable/take_picture" />

            <TextView
                android:id="@+id/photoImgBtn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="@string/take"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#000000"
                android:background="@drawable/take_picture" />

            <TextView
                android:id="@+id/btn_face_next"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="@string/next"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#000000"
                android:visibility="gone"
                android:background="@drawable/take_picture" />
        </LinearLayout>



    </FrameLayout>
</LinearLayout>