<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="com.example.huang.myapplication.visitor.VisitorActivity">

    <include
        android:id="@+id/ll_title"
        layout="@layout/layout_title_visitor"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/ll_title"
        android:fillViewport="true">

        <EditText
            android:id="@+id/edt_visitor_num"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:cursorVisible="true"
            android:hint="@string/input_num"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="32sp"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_visitor_skip"
            style="?android:buttonStyle"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/skip"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/btn_visitor_next"
            style="?android:buttonStyle"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/next"
            android:textSize="32sp"/>
    </LinearLayout>

</RelativeLayout>
