<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.huang.myapplication.respondents.RespondentsActivity">

    <include layout="@layout/layout_title_visitor"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fillViewport="true">

        <EditText
            android:id="@+id/edt_respondents_num"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:cursorVisible="true"
            android:hint="@string/input_host_num"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="32sp"/>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_respondents_call"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:contentDescription="@string/grant_permission"
            android:scaleType="center"
            android:src="@drawable/call"/>
        <ImageView
            android:id="@+id/img_respondents_book"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:contentDescription="@string/grant_permission"
            android:scaleType="center"
            android:clickable="false"
            android:src="@drawable/address_book_64px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_respondents_cancel"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/quxiao"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/btn_respondents_skip"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/skip"/>
        <Button
            android:id="@+id/btn_respondents_next"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_bg"
            android:layout_weight="1"
            android:textSize="32sp"
            android:text="@string/next"
            android:enabled="false"/>
    </LinearLayout>


</LinearLayout>
